@@ -18,7 +18,6 @@ import reactor.core.publisher.Mono;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -84,32 +83,35 @@ public class BookAuthorDaoImpl implements IBookAuthorDao {
     }
 
     @Override
-    public Mono<Void> saveBookAuthor(BookAuthor bookAuthor) {
-        return this.databaseClient
-                .sql("INSERT INTO book_authors(book_id, author_id) VALUES(:bookId, :authorId)")
+    public Mono<Long> saveBookAuthor(BookAuthor bookAuthor) {
+        return this.databaseClient.sql("""
+                        INSERT INTO book_authors(book_id, author_id)
+                        VALUES(:bookId, :authorId)
+                        """)
                 .bind("bookId", bookAuthor.getBookId())
                 .bind("authorId", bookAuthor.getAuthorId())
                 .fetch()
                 .rowsUpdated()
-                .then()
-                .onErrorResume(error -> Mono.error(new ApiException(error.getMessage(), HttpStatus.BAD_REQUEST)));
+                .onErrorMap(error -> new ApiException("Error al insertar en la tabla book_authors" + error.getMessage(), HttpStatus.BAD_REQUEST));
     }
 
     @Override
-    public Flux<Void> saveAllBookAuthor(List<BookAuthor> bookAuthor) {
-        List<Mono<Void>> inserts = bookAuthor.stream()
-                .map(bookAuthorToSave -> this.databaseClient
-                        .sql("INSERT INTO book_authors(book_id, author_id) VALUES(:bookId, :authorId)")
+    public Mono<Void> saveAllBookAuthor(List<BookAuthor> bookAuthorList) {
+        List<Mono<Long>> inserts = bookAuthorList.stream()
+                .map(bookAuthorToSave -> this.databaseClient.sql("""
+                                INSERT INTO book_authors(book_id, author_id)
+                                VALUES(:bookId, :authorId)
+                                """)
                         .bind("bookId", bookAuthorToSave.getBookId())
                         .bind("authorId", bookAuthorToSave.getAuthorId())
                         .fetch()
                         .rowsUpdated()
-                        .then()
-                        .onErrorResume(error -> Mono.error(new ApiException(error.getMessage(), HttpStatus.BAD_REQUEST)))
+                        .onErrorMap(error -> new ApiException(error.getMessage(), HttpStatus.BAD_REQUEST))
                 )
-                .collect(Collectors.toList());
+                .toList();
 
-        return Flux.concat(inserts);
+        Flux<Long> concat = Flux.concat(inserts);
+        return concat.then();
     }
 
     @Override
@@ -149,15 +151,14 @@ public class BookAuthorDaoImpl implements IBookAuthorDao {
                           WHEN COUNT(ba.book_id) > 0 THEN true
                           ELSE false
                        END as result
-                FROM book_authors ba
+                FROM book_authors AS ba
                 WHERE ba.book_id = :bookId
                 """;
 
         return databaseClient.sql(sql)
                 .bind("bookId", bookId)
                 .map((row, metadata) -> row.get("result", Boolean.class))
-                .first()
-                .switchIfEmpty(Mono.error(new ApiException("No record found for book with ID: " + bookId, HttpStatus.NOT_FOUND)));
+                .first();
     }
 
     @Override
@@ -167,49 +168,51 @@ public class BookAuthorDaoImpl implements IBookAuthorDao {
                             WHEN COUNT(ba.book_id) > 0 THEN true
                             ELSE false
                        END as result
-                FROM book_authors ba
+                FROM book_authors AS ba
                 WHERE ba.author_id = :authorId
                 """;
 
-        return databaseClient.sql(sql)
+        return this.databaseClient.sql(sql)
                 .bind("authorId", authorId)
                 .map((row, metadata) -> row.get("result", Boolean.class))
-                .first()
-                .switchIfEmpty(Mono.error(new ApiException("No record found for author with ID: " + authorId, HttpStatus.NOT_FOUND)));
+                .first();
     }
 
     @Override
-    public Flux<IBookProjection> findAllBookAuthorByBookId(Integer bookId) {
+    public Mono<IBookProjection> findAllBookAuthorByBookId(Integer bookId) {
         String sql = """				
-                SELECT ba.book_id as bookId, b.title as title, b.publication_date as publicationDate, b.online_availability as onlineAvailability,
-                        STRING_AGG(a.first_name||' '||a.last_name, ', ') as concatAuthors
-                FROM book_authors ba
-                    INNER JOIN books b ON ba.book_id = b.id
-                    INNER JOIN authors a ON ba.author_id = a.id
+                SELECT b.id AS id,
+                        b.title AS title,
+                        b.publication_date AS publicationDate,
+                        b.online_availability AS onlineAvailability,
+                        STRING_AGG(a.first_name||' '||a.last_name, ',') AS concatAuthors
+                FROM book_authors AS ba
+                    INNER JOIN books AS b ON(ba.book_id = b.id)
+                    INNER JOIN authors AS a ON(ba.author_id = a.id)
                 WHERE b.id = :bookId
-                GROUP BY ba.book_id, b.title, b.publication_date, b.online_availability
+                GROUP BY b.id, b.title, b.publication_date, b.online_availability
                 """;
 
         return databaseClient.sql(sql)
                 .bind("bookId", bookId)
                 .map((row, metadata) -> {
-                    log.info("publicationDate {} ", metadata.getColumnMetadata("publicationDate"));
+                    log.info("Metadata de publicationDate: {} ", metadata.getColumnMetadata("publicationDate"));
 
                     return (IBookProjection) BookVO.builder()
-                            .id(row.get("bookId", Integer.class))
+                            .id(row.get("id", Integer.class))
                             .title(row.get("title", String.class))
                             .publicationDate(row.get("publicationDate", LocalDate.class))
                             .onlineAvailability(row.get("onlineAvailability", Boolean.class))
                             .concatAuthors(row.get("concatAuthors", String.class))
                             .build();
-                }).all()
-                .switchIfEmpty(Mono.error(new ApiException("No record found.", HttpStatus.NOT_FOUND)));
+                })
+                .first();
     }
 
     @Override
     public Mono<Void> deleteBookAuthorByBookId(Integer bookId) {
         String sql = """			
-                DELETE FROM book_authors ba
+                DELETE FROM book_authors AS ba
                 WHERE ba.book_id = :bookId
                 """;
 
@@ -228,19 +231,18 @@ public class BookAuthorDaoImpl implements IBookAuthorDao {
     @Override
     public Mono<Void> deleteBookAuthorByAuthorId(Integer authorId) {
         String sql = """			
-                DELETE FROM book_authors ba
+                DELETE FROM book_authors AS ba
                 WHERE ba.author_id = :authorId
                 """;
 
-        return databaseClient.sql(sql)
+        return this.databaseClient.sql(sql)
                 .bind("authorId", authorId)
                 .fetch()
                 .rowsUpdated()
                 .then()
                 .onErrorMap(t -> {
-                    log.error(t.getMessage());
+                    log.error("Ocurrió un error: " + t.getMessage());
                     return new ApiException("Error in delete book_authors, authorId " + authorId, HttpStatus.NOT_FOUND);
-
                 });
     }
 
